--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,3 @@
-   
 * {
     box-sizing: border-box;
   }
@@ -10,6 +9,7 @@
     --white: rgb(0, 0, 0);
     font-size: 70%;
   }
+
 
   body {
     background: rgb(182, 139, 139);
@@ -181,7 +181,7 @@
     padding-top: 5px;
 }
 
-/* List for High Scores */
+/* Display List for HS*/
  
  ol {
     list-style-type: number;
